update fleamonster text

--- a/_posts/2022-10-14-fleamonster.html
+++ b/_posts/2022-10-14-fleamonster.html
@@ -21,7 +21,7 @@ So I have the ideas to create an online second-handed store, which is easy to ca
 
 <h2>Technology stack choice</h2>
 Although I am already familiar with Drupal, I think Drupal is a quite advanced platform with many extensions and good permission system. However, I think Drupal has to install many extensions and will be slow for such as simple platform. Laravel is also a quite popular PHP framework and it's similar to Ruby on Rails for fast development. Laravel has good MVC pattern and Eloquent model for database ORM.
-Laravel also has WebSocket for real-time messaging. After some analysis and evaluation, I chosen Laravel for the solution.
+Laravel also has WebSocket for real-time messaging. After some analysis and evaluation, I chosen Laravel for the backend and Vue for the frontend.
 
 
 <h2>Demo</h2>
