add chinese character writing project

--- a/_posts/2022-10-14-wordslet.html
+++ b/_posts/2022-10-14-wordslet.html
@@ -16,7 +16,7 @@ background: '/img/bg-workspace.jpg'
 
 <h2>Demo</h2>
 <a href="https://youtube.com/shorts/3IJtJpiFbYQ?feature=share">Youtube demo</a>
-
+<a href="https://github.com/tingan/wordslet-frontend">Github Source Code</a>
 <figure>
     <img src="/img/posts/wordslet/wordslet.png" alt="wordslet" width="800" />
     <figcaption class="text-center">Wordbook Test</figcaption>
