--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ background: '/img/bg-about.jpg'
 <p>My technology stack includes (still expanding):</p>
 <ul>
     <li>PHP: Laravel 8/9, Drupal, Symfony, MediaWiki.</li>
-    <li>JavaScript, Node, React, React Hooks, Redux, React Native, Vue, Nuxt, Gatsby, GraphQL, Webpack, Vite </li>
+    <li>JavaScript, TypeScript, Node, React, React Hooks, Redux, React Native, Vue, Nuxt, Gatsby, GraphQL, Webpack, Vite </li>
     <li>Java: Maven, JavaFX, Spring Boot, Spring Data.</li>
     <li>Python: PyQT 5/6, Tkinter, Click framework</li>
     <li>Web Servers: Nginx, Apache, Varnish, HAProxy</li>
