--- a/_posts/2022-10-15-chinese-character-learning.html
+++ b/_posts/2022-10-15-chinese-character-learning.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Chinese Character Learning
-subtitle: Kids Learning Chinese Character Writing by Chinese Poems
+subtitle: Kids Learning Chinese Character Writing by GatsbyJS
 date: 2022-10-15 12:22 +0300
 background: '/img/bg-cup.jpg'
 ---
@@ -9,6 +9,8 @@ background: '/img/bg-cup.jpg'
 <h3>Motivation</h3>
 For overseas Chinese kids, learning how to write chinese character is not easy. I want to create a chinese character writing app for my 5 years old son. But I think pure chinese character writing app would be very boring. So the idea is to create a Chinese audio books with Chinese poems and related chinese character in the poems for learning. Also the app will provide some games for Chinese character learning.
 
+<h3>Technology stack choice</h3>
+The app would be more like a static website. Therefore, I consider some static web sites technologies such as Jekyll, Hugo and GatsbyJs. GatsbyJs is built on top of React and GraphQL. As I think it's would be easier for me to use GatsbyJs and practice GraphQL technology. So the technology stack is GatsByjS + React Hooks + GraphQL. Netlify is chosen for hosting.
 
 <h3>Demo</h3>
 Netlify App demo: <a href="https://love-books.netlify.app/">Click me</a>
