--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@ background: '/img/bg-about.jpg'
     <li>Java: Maven, JavaFX, Spring Boot, Spring Data.</li>
     <li>Python: PyQT 5/6, Tkinter, Click framework</li>
     <li>Web Servers: Nginx, Apache, Varnish, HAProxy</li>
+    <li>Web Automation: Selenium with Python and Java</li>
     <li>Database: MySQL, MongoDB, redis</li>
     <li>Cloud: AWS, Netlify</li>
     <li>CSS: SASS, PostCSS, Bootstrap, TailwindCSS, Flexbox, Grid</li>
