update about page

--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@ background: '/img/bg-about.jpg'
 <p>My technology stack includes (still expanding):</p>
 <ul>
     <li>PHP: Laravel 8/9, Drupal, Symfony, MediaWiki.</li>
-    <li>JavaScript, TypeScript, Node, React, React Hooks, Redux, React Native, Vue, Nuxt, Gatsby, GraphQL, Webpack, Vite </li>
-    <li>Java: Maven, JavaFX, Spring Boot, Spring Data.</li>
-    <li>Python: PyQT 5/6, Tkinter, Click framework</li>
+    <li>JavaScript, TypeScript, Node, React, React Hooks, Redux, React Native, Vue,Vuex, Nuxt, Gatsby, GraphQL, Webpack, Vite </li>
+    <li>Java: Maven, JavaFX, Spring Boot, Spring Data, Spring Security</li>
+    <li>Python: Django, PyQT 5/6, Tkinter, Click framework</li>
     <li>Web Servers: Nginx, Apache, Varnish, HAProxy</li>
     <li>Web Automation: Selenium with Python and Java</li>
     <li>Database: MySQL, MongoDB, redis</li>
