add demo images

--- a/_posts/2022-10-28-gui.html
+++ b/_posts/2022-10-28-gui.html
@@ -11,6 +11,19 @@ background: '/img/bg-post.jpg'
 I need to write a web automation application with selenium and multithreading support. In the beginning, I consider using Python for its simplicity and selenium support. So I write a commandline app with Python Click Framework. It works fine, but the commandline app is not user friendly as it need to tweak many different command line options.
 So Later, I considered to write a GUI desktop app. Python has many GUI libraries such as Tkinter, PyQT, PySide (the open source version of PyQT). Java also has many GUI libraries such as Swing and JavaFX.
 </p>
+<h2>Demo</h2>
+<figure>
+    <img src="/img/posts/selenium/tkinter.png" alt="wordslet" width="800" />
+    <figcaption class="text-center">GUI with Tkinter</figcaption>
+</figure>
+<figure>
+    <img src="/img/posts/selenium/pyqt.png" alt="wordslet" width="800" />
+    <figcaption class="text-center">GUI with PyQT</figcaption>
+</figure>
+<figure>
+    <img src="/img/posts/selenium/javafx.png" alt="wordslet" width="800" />
+    <figcaption class="text-center">GUI with JavaFX</figcaption>
+</figure>
 <h2>Comparison Result</h2>
 <p>
 Tkinter works fine functionally, but it is written is python. so the GUI responsiveness is a little slow. Also Tkinter has some issues of inconsistencies in Windows and Mac platform. E.g. for Mac, I have to install tkmacosx pip module to widgets to working in Mac.
