--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ background: '/img/bg-about.jpg'
     <li>Web Servers: Nginx, Apache, Varnish, HAProxy</li>
     <li>Web Automation: Selenium with Python and Java</li>
     <li>Database: MySQL, MongoDB, redis</li>
-    <li>Cloud: AWS, Netlify</li>
+    <li>Cloud: AWS, Firebase, Netlify</li>
     <li>CSS: SASS, PostCSS, Bootstrap, TailwindCSS, Flexbox, Grid</li>
     <li>Design: Responsive Design, Figma, Sketch</li>
 </ul>
