wordslet update screenshots

--- a/_posts/2022-10-14-wordslet.html
+++ b/_posts/2022-10-14-wordslet.html
@@ -19,6 +19,11 @@ background: '/img/bg-workspace.jpg'
 <br />
 <a href="https://github.com/tingan/wordslet-frontend">Github Source Code</a>
 <figure>
-    <img src="/img/posts/wordslet/wordslet.png" alt="wordslet" width="800" />
+    <img src="/img/posts/wordslet/wordslet-test.png" alt="wordslet" width="800" />
     <figcaption class="text-center">Wordbook Test</figcaption>
 </figure>
+<figure>
+    <img src="/img/posts/wordslet/wordslet-learn.png" alt="wordslet" width="800" />
+    <figcaption class="text-center">Wordbook Learn</figcaption>
+</figure>
+
