--- a/_posts/2022-10-14-wordslet.html
+++ b/_posts/2022-10-14-wordslet.html
@@ -12,10 +12,10 @@ background: '/img/bg-workspace.jpg'
 
 <h2>Technology stack choice</h2>
 
-<p>Although it's easy to do it in Laravel as I am already very familiar with it, but I consider Laravel will be a little heavy for such a small web app. As I am familiar with React, Redux, React Hooks, it would be easy to develop the app by MERN (MongoDB, Express, React, Node). For styling, although the Bootstrap will be a good choice, but I decide to give TailWindCSS a shot. As TailWindCSS is a new way of styling comparing with SASS and it's quit popular. so the technology stack choice is MERN + TailWindCSS.</p>
+<p>Although it's easy to do it in Laravel as I am already very familiar with it, but I consider Laravel will be a little heavy for such a small web app. As I am familiar with React, Redux, React Hooks, it would be easy to develop the app by MERN (MongoDB, Express, React, Node). For styling, although the Bootstrap will be a good choice, but I decide to give TailWindCSS a shot. As TailWindCSS is a new way of styling comparing with SASS and it's quit popular. so the technology stack choice is MERN + TailWindCSS. Web Speech API and Google Cloud Text to Speech are used for pronunciation.</p>
 
 <h2>Demo</h2>
-<a href="https://youtube.com/shorts/3IJtJpiFbYQ?feature=share">Youtube demo</a>
+<a href="https://www.youtube.com/shorts/eQ_WgDcDV50">Youtube demo</a>
 <br />
 <a href="https://github.com/tingan/wordslet-frontend">Github Source Code</a>
 <figure>
@@ -27,3 +27,5 @@ background: '/img/bg-workspace.jpg'
     <figcaption class="text-center">Wordbook Learn</figcaption>
 </figure>
 
+<h2>Updates</h2>
+My kid doesn't recongize much chinese characters, I decided to add the audio for the word and definition. Initially I used the free Web Speech API, however, it has some limitations. e.g. Web Speech API only supports latest Chrome browser. Also, Web speech API has limited support for Finnish, the pronunciation is bad. So I decided to use Google cloud text to speech API, the quality is much better.
