add mediawiki contribution

--- a/about.html
+++ b/about.html
@@ -2,21 +2,28 @@
 layout: page
 title: About Me
 description: A tech enthusiast and always passionate about new technologies and want to explore their possibilities and potentialities.
-background: '/img/bg-about.jpg'
+background: "/img/bg-about.jpg"
 ---
 
-<p>I like technology which makes life easier and more efficient and convenient. For me, technology is not only for job, it's also my hobby and way of life.</p>
+<p>
+  I like technology which makes life easier and more efficient and convenient.
+  For me, technology is not only for job, it's also one of my hobbies besides
+  ski, skate, swimming etc.
+</p>
 
 <p>My technology stack includes (still expanding):</p>
 <ul>
-    <li>PHP: Laravel 8/9, Drupal, Symfony, MediaWiki.</li>
-    <li>JavaScript, TypeScript, Node, React, React Hooks, Redux, Next.js, React Native, Vue,Vuex, Nuxt, Gatsby, GraphQL, Webpack, Vite </li>
-    <li>Java: Maven, JavaFX, Spring Boot, Spring Data, Spring Security</li>
-    <li>Python: Django, PyQT, Tkinter, Click framework</li>
-    <li>Web Servers: Nginx, Apache, Varnish, HAProxy</li>
-    <li>Web Automation: Selenium with Python and Java</li>
-    <li>Database: MySQL, MongoDB, redis</li>
-    <li>Cloud: AWS, Firebase, Netlify</li>
-    <li>CSS: SASS, PostCSS, Bootstrap, TailwindCSS, Flexbox, Grid</li>
-    <li>Design: Responsive Design, Figma, Sketch</li>
+  <li>PHP: Laravel 8/9, Drupal, Symfony, MediaWiki.</li>
+  <li>
+    JavaScript, TypeScript, Node, React, React Hooks, Redux, Next.js, React
+    Native, Vue,Vuex, Nuxt, Gatsby, GraphQL, Webpack, Vite
+  </li>
+  <li>Java: Maven, JavaFX, Spring Boot, Spring Data, Spring Security</li>
+  <li>Python: Django, PyQT, Tkinter, Click framework</li>
+  <li>Web Servers: Nginx, Apache, Varnish, HAProxy</li>
+  <li>Web Automation: Selenium with Python and Java</li>
+  <li>Database: MySQL, MongoDB, redis</li>
+  <li>Cloud: AWS, Firebase, Netlify</li>
+  <li>CSS: SASS, PostCSS, Bootstrap, TailwindCSS, Flexbox, Grid</li>
+  <li>Design: Responsive Design, Figma, Sketch</li>
 </ul>
